clean up an switch to composer

--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -23,20 +23,21 @@
                     <a class="nav-link" href="/posts">Posts</a>
                 </li>
             </ul>
-<!--            --><?php //if (\Mvc\Library\SessionManager::isAuthenticated()): ?>
-<!--                <ul class="navbar-nav ml-auto">-->
-<!--                    <li class="nav-item active">-->
-<!--                        <a class="nav-link" href="/admin">Admin</a>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            --><?php //endif; ?>
         </div>
     </nav>
+    {% block content %}
 
-<!--    --><?php //if ($messages = \Mvc\Library\SessionManager::getMessages()): ?>
-<!--        --><?php //foreach ($messages as $message): ?>
-<!--            <div class="alert alert---><?php //echo $message['type'] ?><!--" role="alert">-->
-<!--                --><?php //$this->esc($message['message']) ?>
-<!--            </div>-->
-<!--        --><?php //endforeach; ?>
-<!--    --><?php //endif; ?>
+    {% endblock %}
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
+
+</body>
+</html>
